# Adat

./: .gitignore  README.md  pyproject.toml
adat/: dataset.py
data_saving_pipelines/adult_census/: adut_dataset.py
tests/: main.py  secrets.json  test.ipynb
